cmake_minimum_required(VERSION 3.30)
project(algoritmos)

set(CMAKE_CXX_STANDARD 20)

add_executable(algoritmos main.cpp)
add_executable(hoja01_ejercicio01 HOJAEJERCICIOS01/hoja01_ejercicio01.cpp)
add_executable(hoja01_ejercicio02 HOJAEJERCICIOS01/hoja01_ejercicio02.cpp)
add_executable(hoja01_ejercicio03 HOJAEJERCICIOS01/hoja01_ejercicio03.cpp)
add_executable(hoja02_ejercicio01 HOJAEJERCICIOS02/hoja02_ejercicio01.cpp)
add_executable(hoja02_ejercicio02 HOJAEJERCICIOS02/hoja02_ejercicio02.cpp)
add_executable(hoja02_ejercicio03 HOJAEJERCICIOS02/hoja02_ejercicio03.cpp)
add_executable(ejercicio_perusall HOJAEJERCICIOS02/ejercicio_perusall.cpp)
