cmake_minimum_required(VERSION 3.30)
project(algoritmos)

set(CMAKE_CXX_STANDARD 20)

add_executable(algoritmos main.cpp)
add_executable(hoja01_ejercicio01 HOJAEJERCICIOS01/hoja01_ejercicio01.cpp)
add_executable(hoja01_ejercicio02 HOJAEJERCICIOS01/hoja01_ejercicio02.cpp)
add_executable(hoja01_ejercicio03 HOJAEJERCICIOS01/hoja01_ejercicio03.cpp)
add_executable(hoja02_ejercicio01 HOJAEJERCICIOS02/hoja02_ejercicio01.cpp)
add_executable(hoja02_ejercicio02 HOJAEJERCICIOS02/hoja02_ejercicio02.cpp)
add_executable(hoja02_ejercicio03 HOJAEJERCICIOS02/hoja02_ejercicio03.cpp)
add_executable(ejercicio_perusall HOJAEJERCICIOS02/ejercicio_perusall.cpp)
add_executable(hoja03_ejercicio01 HOJAEJERCICIOS03/hoja03_ejercicio01.cpp)
add_executable(hoja03_ejercicio02 HOJAEJERCICIOS03/hoja03_ejercicio02.cpp)
add_executable(hoja03_ejercicio03 HOJAEJERCICIOS03/hoja03_ejercicio03.cpp)
add_executable(hoja03_ejercicio04 HOJAEJERCICIOS03/hoja03_ejercicio04.cpp)
add_executable(hoja03_ejercicio05 HOJAEJERCICIOS03/hoja03_ejercicio05.cpp)
add_executable(hoja03_ejercicio06 HOJAEJERCICIOS03/hoja03_ejercicio06.cpp)
add_executable(ejercicio01_asociacion HOJAEJERCICIOS03/EJERCICIOSREFORZAMIENTO/ejercicio01_asociacion.cpp)
add_executable(ejercicio02_agregacion HOJAEJERCICIOS03/EJERCICIOSREFORZAMIENTO/ejercicio02_agregacion.cpp)
add_executable(ejercicio03_composicion HOJAEJERCICIOS03/EJERCICIOSREFORZAMIENTO/ejercicio03_composicion.cpp)
